header and intro

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="logo">My Logo</div>
+        <div class="menu-icon"></div>
+    </header>
+
+    <main class="headline">
+        <div class="intro">I'm Attash.<br>Glad to see you</div>
+    </main>
 </body>
 </html>
