--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
 <body>
     <header class="header">
         <div class="logo">My Logo</div>
-        <div class="menu-icon"></div>
+        <div class="menu-icon">
+            <img src="images/menu-icon.png" alt="menu icon">
+        </div>
     </header>
 
     <main class="headline">
-        <div class="intro">I'm Attash.<br>Glad to see you</div>
+        <div class="intro">I'm Attash. <br>Glad to see you</div>
+        <div class="bio">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</div>
+        <div class="connect">LET'S CONNECT</div>
+        <div class="social-icons">
+            <img src="images/social-media-icons.png" alt="social media icons">
+        </div>
     </main>
 </body>
 </html>
