completed till connect section of headline

--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
         </div>
     </header>
 
-    <main class="headline">
-        <div class="intro">I'm Attash. <br>Glad to see you</div>
+    <section class="headline">
+        <div class="bkgd-img">
+            <img src="images/header-shapes mobile.png" alt="background img">
+        </div>
+    <div class="content">
+        <div class="intro">I'm Attash. <br>Glad to see you!</div>
         <div class="bio">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</div>
         <div class="connect">LET'S CONNECT</div>
         <div class="social-icons">
             <img src="images/social-media-icons.png" alt="social media icons">
-        </div>
-    </main>
+    </div>
+    </div>
+    </section>
 </body>
 </html>
