fixed background color issue

--- a/index.html
+++ b/index.html
@@ -124,5 +124,24 @@
 
         </div>
     </section>
+
+    <section class="about-section">
+        <div class="content">
+            <div class="intro">About Myself</div>
+            <div class="bio">Hello I’m a software developer! I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</div>
+            <div class="connect">LET'S CONNECT</div>
+            <div class="social-icons">
+                <img src="images/social-media-icons.png" alt="social media icons">
+        </div>
+    </section>
+
+    <section class="experience">
+        <div class="languages">
+            <h3>Languages</h3>
+            <div class="arrow-down">></div>
+        </div>
+       
+    </section>
+
 </body>
 </html>
