completed about section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="project-container">
     <header class="header">
         <div class="logo">My Logo</div>
         <div class="menu-icon">
@@ -140,8 +141,18 @@
             <h3>Languages</h3>
             <div class="arrow-down">></div>
         </div>
+        <img src="images/Langguage List.png" alt="">
        
-    </section>
+        <div class="frameworks">
+            <h3>Frameworks</h3>
+            <div class="arrow-right">></div>
+        </div>
 
+        <div class="skills">
+            <h3>Skills</h3>
+            <div class="arrow-right">></div>
+        </div>
+    </section>
+    </div> 
 </body>
 </html>
