contact me paragraph

--- a/index.html
+++ b/index.html
@@ -153,6 +153,17 @@
             <div class="arrow-right">></div>
         </div>
     </section>
+
+    <section class="contact-section">
+
+        <div class="ctc-img">
+        <img src="images/contact form shapes-mobile@2x.png" alt="">
+        </div>
+
+        <div class="ctc-content">
+        <h2>Contact me</h2>
+        </div>
+    </section>
     </div> 
 </body>
 </html>
