--- a/index.html
+++ b/index.html
@@ -162,7 +162,28 @@
 
         <div class="ctc-content">
         <h2>Contact me</h2>
+        <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. 
+            I’d love to help with it!</p>
         </div>
+
+        <div class="form-container">
+            <form>
+                <div class="namebox">
+            <input type="text" name="name" placeholder="Name">
+                </div>
+            <br>
+                <div class="emailbox">
+            <input type="text" name="email" placeholder="example@gmail.com">
+                </div>
+            <br>
+                <div class="messagebox">
+            <input type="text" name="name" placeholder="Write your message here">
+                </div>
+            <br>
+            <button type="submit">Get in touch</button>
+        </form>
+        </div>
+
     </section>
     </div> 
 </body>
